# WSA

./: CMakeLists.txt  FORDEVELOPPER.md  LICENSE  README.md  main.cpp
googletest/googletest/: Makefile  cmake_install.cmake  gtest.cbp
src/: Score.cpp  Score.h  SuffixTree.cpp  SuffixTree.h  fasta.cpp  fasta.h  gffToCategory.cpp  gffToCategory.h  seed.cpp  seed.h  seed_v0.cpp  seed_v1.cpp  seed_v2.cpp  zdp.cpp  zdp.h
src/test/: seed_test.cpp  suffixTree_test.cpp
